feat: adding get task
